==> wellfrogliu/labview-stm32/RealView/EK-LM3S8962 USB/Template/Drivers/Serial/ARM_Serial.c <==
#define PART_LM3S8962  // TODO: This needs to be defined at the project level
#include "LVConfig.h"
#include "ARM_Serial.h"
#include "pin_map.h"
#include "hw_types.h"
#include "hw_memmap.h"
#include "hw_ints.h"
#include "sysctl.h"
#include "interrupt.h"
#include "uart.h"
#include "gpio.h"
#define SERIAL_PORT_IN_USE(port)    ((SER_MINPORT <= port) && (SER_MAXPORT >= port))
#define SER_MINPORT   0
#define SER_MAXPORT   1 /* 8962 has 2 serial ports, some parts have 3 */
#define SER_IN_BUF_SIZE   64              /* Input buffer in bytes (power 2) */
#define SER_OUT_BUF_SIZE  0              /* Output buffer in bytes (power 2) */
#define SER_PORTCLOSED    0
#define SER_PORTOPENED    1
#define SER_OK                  1
#define SER_GENERAL_ERR         0
#define SER_PORTNOTKNOWN_ERR  (-1)
#define SER_PORTNOTOPENED_ERR (-1)
#define SER_DEVNOTKNOWN_ERR   (-1)
#define SER_IN_MASK           (SER_IN_BUF_SIZE-1ul)
#define SER_OUT_MASK          (SER_OUT_BUF_SIZE-1ul)
#define IN_BUF_RESET(serDev)        (serDev->ser_in.rd_idx = serDev->ser_in.wr_idx = 0)
#define IN_BUF_WR(serDev, dataIn)   (serDev->ser_in.data[SER_IN_MASK & serDev->ser_in.wr_idx++] = (dataIn))
#define IN_BUF_RD(serDev)           (serDev->ser_in.data[SER_IN_MASK & serDev->ser_in.rd_idx++])
#define IN_BUF_EMPTY(serDev)        (serDev->ser_in.rd_idx == serDev->ser_in.wr_idx)
#define IN_BUF_FULL(serDev)         (serDev->ser_in.rd_idx == serDev->ser_in.wr_idx+1)

int ARM_Serial_OpenPort (int port, int *serDevNo) {
  SER_INFO *pSerDev;

  if ( (port < SER_MINPORT) ||                      /* check the port number */
       (port > SER_MAXPORT)   ) {
    return (SER_PORTNOTKNOWN_ERR);
  }

  /* get handy pointer to serial port info */
  pSerDev = &ser_Dev[port - SER_MINPORT];

  /* enable the GPIO port and the UART, then enable the UART pins */
  SysCtlPeripheralEnable(pSerDev->periphGpio);
  SysCtlPeripheralEnable(pSerDev->periphUart);
  GPIOPinTypeUART(pSerDev->port, pSerDev->pins);
  UARTEnable(pSerDev->uartBase);

  /* set port status indicator and return "handle" to caller */
  pSerDev->status = SER_PORTOPENED;
  *serDevNo = pSerDev->serialDeviceNumber;

  return (SER_OK);
}

int ARM_Serial_ClosePort (int serDevNo) {
  SER_INFO *pSerDev;

  serDevNo--;
  if ( (serDevNo < (SER_MINPORT)) ||              /* check the serial device number */
       (serDevNo > (SER_MAXPORT))   ) {
    return (SER_DEVNOTKNOWN_ERR);
  }

  /* get pointer to serial port info */
  pSerDev = &ser_Dev[(serDevNo - SER_MINPORT)];

  /* Turn off the uart generating interrupts, and then disable the uart.
   * Disable the uart interrupt on the interrupt controller. */
  UARTIntDisable(pSerDev->uartBase, UART_INT_RT | UART_INT_RX | UART_INT_TX);
  UARTDisable(pSerDev->uartBase);
#ifdef LM_USE_INT_REGISTER
  UARTIntUnregister(pSerDev->uartBase);
#else
  IntDisable(pSerDev->interrupt);
#endif

  /* Turn the peripheral off since it will no longer be used, but
   * leave the GPIO port enabled because some other peripheral might
   * be using it.  Set the peripheral pins to be inputs. */
  SysCtlPeripheralDisable(pSerDev->periphUart);
  GPIOPinTypeGPIOInput(pSerDev->port, pSerDev->pins);

  /* Indicate the port is closed. */
  pSerDev->status   = SER_PORTCLOSED;
  
  return (SER_OK);
}

int ARM_Serial_InitPort (int serDevNo, unsigned long baudrate, unsigned int  databits,
                                unsigned int  parity,   unsigned int  stopbits) {
  SER_INFO *pSerDev;
  unsigned long config = 0;

  serDevNo--;
  if ( (serDevNo < (SER_MINPORT)) ||     /* check the serial device number */
       (serDevNo > (SER_MAXPORT))   ) {
    return (SER_DEVNOTKNOWN_ERR);
  }

  pSerDev = &ser_Dev[(serDevNo - SER_MINPORT)];

  switch (databits) {
    case 5:                              /* 5 Data bits   */
      config |= UART_CONFIG_WLEN_5;
    break;
    case 6:                              /* 6 Data bits   */
      config |= UART_CONFIG_WLEN_6;
    break;
    case 7:                              /* 7 Data bits   */
      config |= UART_CONFIG_WLEN_7;
    break;
    case 8:                              /* 8 Data bits   */
    default:
      config |= UART_CONFIG_WLEN_8;
    break;
  }

  switch (stopbits) {
    case 1:                              /* 1,5 Stop bits */
    case 2:                              /* 2   Stop bits */
      config |= UART_CONFIG_STOP_TWO;
    break;
    case 0:                              /* 1   Stop bit  */
    default:
      config |= UART_CONFIG_STOP_ONE;
    break;
  }

  switch (parity) {
    case 1:                              /* Parity Odd    */
      config |= UART_CONFIG_PAR_ODD;
    break;
    case 2:                              /* Parity Even   */
      config |= UART_CONFIG_PAR_EVEN;
    break;
    case 3:                              /* Parity Mark   */
      config |= UART_CONFIG_PAR_ONE;
    break;
    case 4:                              /* Parity Space  */
      config |= UART_CONFIG_PAR_ZERO;
    break;
    case 0:                              /* Parity None   */
    default:
      config |= UART_CONFIG_PAR_NONE;
    break;
  }

  pSerDev->baudRate = baudrate;
  pSerDev->dataBits = databits;
  pSerDev->stopBits = stopbits;
  pSerDev->parity   = parity;
  
  IN_BUF_RESET(pSerDev);

  /* configure the uart parameters */
  UARTConfigSetExpClk(pSerDev->uartBase, SysCtlClockGet(),
                      baudrate, config);
  pSerDev->txFifoEmpty = 1;                         /* TX fifo is empty                 */

  /* Enable or install the UART interrupt handler, then enable the
   * specific interrupts on the UART. */
#ifdef LM_USE_INT_REGISTER
  UARTIntRegister(pSerDev->uartBase, pSerDev->ser_irq);
#else
  IntEnable(pSerDev->interrupt);
#endif
  UARTIntEnable(pSerDev->uartBase, UART_INT_RT | UART_INT_RX | UART_INT_TX);

  /* TODO: do we need to set interrupt priority other than default? */
  /* TODO: do we really need to enable the TX interrupt?  it does not
   * appear to actually be used for anything here */

  return (SER_OK);
}

void ser_irq_0 (void) {
  SER_INFO *pSerDev = &ser_Dev[0 - SER_MINPORT];
  unsigned long status;

  /* get the interrupt status and clear the pending ints */
  status = UARTIntStatus(pSerDev->uartBase, 1);
  UARTIntClear(pSerDev->uartBase, status);

  /* If TX interrupt, just set the empty flag */
  if(status & UART_INT_TX) {
    pSerDev->txFifoEmpty = 1;
  }

  /* For RX interrupt, read as many characters as are available in the UART */
  if(status & (UART_INT_RX | UART_INT_RT)) {
    while(UARTCharsAvail(pSerDev->uartBase)) {
        IN_BUF_WR(pSerDev, UARTCharGetNonBlocking(pSerDev->uartBase));
    }
  } 

  /* TODO: could use direct register access for more effeciency */
  /* TODO: could really get rid of TX case completely as txFifoFlag
   * is really not used for anything */
}

void ser_irq_0(void) {}

void ser_irq_1 (void) {
  SER_INFO *pSerDev = &ser_Dev[1 - SER_MINPORT];
  unsigned long status;

  /* get the interrupt status and clear the pending ints */
  status = UARTIntStatus(pSerDev->uartBase, 1);
  UARTIntClear(pSerDev->uartBase, status);

  /* If TX interrupt, just set the empty flag */
  if(status & UART_INT_TX) {
    pSerDev->txFifoEmpty = 1;
  }

  /* For RX interrupt, read as many characters as are available in the UART */
  if(status & (UART_INT_RX | UART_INT_RT)) {
    while(UARTCharsAvail(pSerDev->uartBase)) {
        IN_BUF_WR(pSerDev, UARTCharGetNonBlocking(pSerDev->uartBase));
    }
  } 

  /* TODO: could use direct register access for more effeciency */
  /* TODO: could really get rid of TX case completely as txFifoFlag
   * is really not used for anything */
}

void ser_irq_1(void) {}

void ser_irq_2 (void) {
  SER_INFO *pSerDev = &ser_Dev[2 - SER_MINPORT];
  unsigned long status;

  /* get the interrupt status and clear the pending ints */
  status = UARTIntStatus(pSerDev->uartBase, 1);
  UARTIntClear(pSerDev->uartBase, status);

  /* If TX interrupt, just set the empty flag */
  if(status & UART_INT_TX) {
    pSerDev->txFifoEmpty = 1;
  }

  /* For RX interrupt, read as many characters as are available in the UART */
  if(status & (UART_INT_RX | UART_INT_RT)) {
    while(UARTCharsAvail(pSerDev->uartBase)) {
        IN_BUF_WR(pSerDev, UARTCharGetNonBlocking(pSerDev->uartBase));
    }
  } 

  /* TODO: could use direct register access for more effeciency */
  /* TODO: could really get rid of TX case completely as txFifoFlag
   * is really not used for anything */
}

void ser_irq_2(void) {}
