==> wellfrogliu/labview-stm32/RealView/Generic/LPC2468/Template/Drivers/Serial/ARM_Serial.c <==
#define LPC23XX_SAMPLE_DRIVER        1
#define SERIAL_PORT_IN_USE(port)    ((SER_MINPORT <= port) && (SER_MAXPORT >= port))
#include <LPC23xx.H>                             /* LPC23xx definitions */
#include <???.h>
#include "LVConfig.h"
#include "ARM_Serial.h"
#define SER_MINPORT   0
#define SER_MAXPORT   1  /* Change this to 3 to enable the extra serial ports 2 and 3*/
#define SER_MINPORT   ???
#define SER_MAXPORT   ???
#define SER_IN_BUF_SIZE   64              /* Input buffer in bytes (power 2) */
#define SER_OUT_BUF_SIZE  0              /* Output buffer in bytes (power 2) */
#define SER_PORTCLOSED    0
#define SER_PORTOPENED    1
#define SER_OK                  1
#define SER_GENERAL_ERR         0
#define SER_PORTNOTKNOWN_ERR  (-1)
#define SER_PORTNOTOPENED_ERR (-1)
#define SER_DEVNOTKNOWN_ERR   (-1)
#define SER_IN_MASK           (SER_IN_BUF_SIZE-1ul)
#define SER_OUT_MASK          (SER_OUT_BUF_SIZE-1ul)
#define IN_BUF_RESET(serDev)        (serDev->ser_in.rd_idx = serDev->ser_in.wr_idx = 0)
#define IN_BUF_WR(serDev, dataIn)   (serDev->ser_in.data[SER_IN_MASK & serDev->ser_in.wr_idx++] = (dataIn))
#define IN_BUF_RD(serDev)           (serDev->ser_in.data[SER_IN_MASK & serDev->ser_in.rd_idx++])
#define IN_BUF_EMPTY(serDev)        (serDev->ser_in.rd_idx == serDev->ser_in.wr_idx)
#define IN_BUF_FULL(serDev)         (serDev->ser_in.rd_idx == serDev->ser_in.wr_idx+1)
#define IN_BUF_COUNT(serDev)        (SER_IN_MASK & (serDev->ser_in.wr_idx - serDev->ser_in.rd_idx))

int ARM_Serial_OpenPort (int port, int *serDevNo) {

  if ( (port < SER_MINPORT) ||                      /* check the port number */
       (port > SER_MAXPORT)   ) {
    return (SER_PORTNOTKNOWN_ERR);
  }

  switch (port) {
    #if SERIAL_PORT_IN_USE(0)
    case 0:
      /* USER CODE =====================================================================*/
      /* Add code to initialise the pinout hardware for UART 0 */
      #if (LPC23XX_SAMPLE_DRIVER == 1)
      /* <LPC2378 Example Code> */     
      PINSEL0 |= 0x00000050;                           /* Enable TxD0 and RxD0 */
      #else
      /* <your code>  */
      #endif
      /* END USER CODE ================================================================ */  
      break;
    #endif
    
    #if SERIAL_PORT_IN_USE(1)
    case 1:
      /* USER CODE =====================================================================*/
      /* Add code to initialise the pinout hardware for UART 1 */
      #if (LPC23XX_SAMPLE_DRIVER == 1)
      /* <LPC2378 Example Code> */     
      PINSEL7 |= 0x0000000F;                           /* Enable TxD1 and RxD1 */
      #else
      /* <your code>  */
      #endif
      /* END USER CODE ================================================================ */      
      break;
    #endif
    
    #if SERIAL_PORT_IN_USE(2)      
    case 2:
      /* USER CODE =====================================================================*/
      /* Add code to initialise the pinout hardware for UART 2 */
      #if (LPC23XX_SAMPLE_DRIVER == 1)
      /* <LPC2378 Example Code> */     
      PINSEL0 |= 0x00500000;                           /* Enable TxD2 and RxD2 */
      #else
      /* <your code>  */
      #endif
      /* END USER CODE ================================================================ */  
      break;
    #endif
    
    #if SERIAL_PORT_IN_USE(3)
    case 3:
      /* USER CODE =====================================================================*/
      /* Add code to initialise the pinout hardware for UART 3 */
      #if (LPC23XX_SAMPLE_DRIVER == 1)
      /* <LPC2378 Example Code> */     
      PINSEL0 |= 0x0000000A;                                    /* Enable TxD3 and RxD3 */
      #else
      /* <your code>  */
      #endif
      /* END USER CODE ================================================================ */      
      break;      
    #endif
      
    default:
      ; // Should never happen (protected by port check above)
  };

  ser_Dev[port - SER_MINPORT].status = SER_PORTOPENED;
  *serDevNo = ser_Dev[port - SER_MINPORT].serialDeviceNumber;

  return (SER_OK);
}

int ARM_Serial_ClosePort (int serDevNo) {
  SER_INFO *pSerDev;

  serDevNo -= 1;                                  /* Convert the serDevNo to the port number */
  if ( (serDevNo < (SER_MINPORT)) ||              /* check the serial device number */
       (serDevNo > (SER_MAXPORT))   ) {
    return (SER_DEVNOTKNOWN_ERR);
  }

  pSerDev = &ser_Dev[(serDevNo - SER_MINPORT)];

  while(!pSerDev->txFifoEmpty) 
    os_dly_wait(10);                  /* wait for fifo to empty before closing port */

  switch (serDevNo - SER_MINPORT) {
    #if SERIAL_PORT_IN_USE(0)
    case 0:
      /* USER CODE =====================================================================*/
      /* Uninitialise the pinout hardware for UART 0 */
      #if (LPC23XX_SAMPLE_DRIVER == 1)
      /* <LPC2378 Example Code> */     
      PINSEL0 &= 0xFFFFFFAF;                          /* Disable TxD0 and RxD0 */
      #else
      /* <your code>  */
      #endif
      /* END USER CODE ================================================================ */  
      break;
    #endif
    
    #if SERIAL_PORT_IN_USE(1)
    case 1:
      /* USER CODE =====================================================================*/
      /* Uninitialise the pinout hardware for UART 1 */
      #if (LPC23XX_SAMPLE_DRIVER == 1)
      /* <LPC2378 Example Code> */     
      PINSEL7 &= ~0x0000000F;                         /* Disable TxD1 and RxD1 */
      #else
      /* <your code>  */
      #endif
      /* END USER CODE ================================================================ */      
      break;
    #endif
    
    #if SERIAL_PORT_IN_USE(2)
    case 2:
      /* USER CODE =====================================================================*/
      /* Uninitialise the pinout hardware for UART 2 */
      #if (LPC23XX_SAMPLE_DRIVER == 1)
      /* <LPC2378 Example Code> */     
      PINSEL0 &= 0xFFAFFFFF;                          /* Disable TxD2 and RxD2 */
      #else
      /* <your code>  */
      #endif
      /* END USER CODE ================================================================ */      
      break;
    #endif
    
    #if SERIAL_PORT_IN_USE(3)
    case 3:
      /* USER CODE =====================================================================*/
      /* Uninitialise the pinout hardware for UART 3 */
      #if (LPC23XX_SAMPLE_DRIVER == 1)
      /* <LPC2378 Example Code> */     
      PINSEL0 &= 0xFFFFFFF5;                          /* Disable TxD3 and RxD3 */
      #else
      /* <your code>  */
      #endif
      /* END USER CODE ================================================================ */      
      break;
    #endif
    
    default:
      ; // Should never happen (protected by port check above)  
  }

  /* USER CODE =====================================================================*/
  /* Disable the interrupt in the VIC and UART controllers */
  #if (LPC23XX_SAMPLE_DRIVER == 1)
  /* <LPC2378 Example Code> */     
  *(pSerDev->ier) = 0x00;                           /* Disable UART interrupts   */
  VICIntEnClr = pSerDev->ser_irq_mask;              /* Disable VIC interrupt     */
  #else
  /* <your code>  */
  #endif
  /* END USER CODE ================================================================ */      

  pSerDev->status   = SER_PORTCLOSED;
  
  return (SER_OK);
}

int ARM_Serial_InitPort (int serDevNo, unsigned long baudrate, unsigned int  databits,
                                unsigned int  parity,   unsigned int  stopbits) {

  unsigned char lcr_p, lcr_s, lcr_d;
  unsigned long dll;
  SER_INFO *pSerDev;

  serDevNo -= 1;                         /* Convert the serDevNo to the port number */
  if ( (serDevNo < (SER_MINPORT)) ||     /* check the serial device number */
       (serDevNo > (SER_MAXPORT))   ) {
    return (SER_DEVNOTKNOWN_ERR);
  }

  pSerDev = &ser_Dev[(serDevNo - SER_MINPORT)];

  switch (databits) {
    case 5:                              /* 5 Data bits   */
      lcr_d = 0x00;
    break;
    case 6:                              /* 6 Data bits   */
      lcr_d = 0x01;
    break;
    case 7:                              /* 7 Data bits   */
      lcr_d = 0x02;
    break;
    case 8:                              /* 8 Data bits   */
    default:
      lcr_d = 0x03;
    break;
  }

  switch (stopbits) {
    case 1:                              /* 1,5 Stop bits */
    case 2:                              /* 2   Stop bits */
      lcr_s = 0x04;
    break;
    case 0:                              /* 1   Stop bit  */
    default:
      lcr_s = 0x00;
    break;
  }

  switch (parity) {
    case 1:                              /* Parity Odd    */
      lcr_p = 0x08;
    break;
    case 2:                              /* Parity Even   */
      lcr_p = 0x18;
    break;
    case 3:                              /* Parity Mark   */
      lcr_p = 0x28;
    break;
    case 4:                              /* Parity Space  */
      lcr_p = 0x38;
    break;
    case 0:                              /* Parity None   */
    default:
      lcr_p = 0x00;
    break;
  }

  pSerDev->baudRate = baudrate;
  pSerDev->dataBits = databits;
  pSerDev->stopBits = stopbits;
  pSerDev->parity   = parity;
  
  IN_BUF_RESET(pSerDev);
  
  /* USER CODE =====================================================================*/
  /* Configure the UART hardware with the specified data for baud rate / etc  */
  #if (LPC23XX_SAMPLE_DRIVER == 1)
  /* <LPC2378 Example Code> */  
  dll = ((UART_CLK / baudrate) / 16UL);

  *(pSerDev->fdr) = 0;                              /* Fractional divider not used      */
  *(pSerDev->lcr) = 0x80 | lcr_d | lcr_p | lcr_s;   /* Data bits, Parity,   Stop bit    */
  *(pSerDev->dll) = dll;                            /* Baud Rate @ 14,4 MHZ PCLK        */
  *(pSerDev->dlm) = (dll >> 8);                     /* High divisor latch               */
  *(pSerDev->lcr) = 0x00 | lcr_d | lcr_p | lcr_s;   /* DLAB = 0                         */
  *(pSerDev->fcr) = 0x87;                           /* Enable and reset FIFOs (irq=8 Chr in RxFIFO) */
  *(pSerDev->ier) = 0x03;                           /* Enable TX/RX interrupts          */
  pSerDev->txFifoEmpty = 1;                         /* TX fifo is empty                 */
  #else
  /* <your code>  */
  #endif
  /* END USER CODE ================================================================ */   

  /* USER CODE =====================================================================*/
  /* Set up and enable the UART interrupt in the interrupt controller */
  #if (LPC23XX_SAMPLE_DRIVER == 1)
  /* <LPC2378 Example Code> */  
  *(pSerDev->irqAddr) = (unsigned long)pSerDev->ser_irq;  /* Set interrupt function           */
  *(pSerDev->irqCntl) = 0x0F;                             /* Set interrupt priority           */
  VICIntEnable = pSerDev->ser_irq_mask;                   /* Enable interrupt */ 
  #else
  /* <your code>  */
  #endif
  /* END USER CODE ================================================================ */   

  return (SER_OK);
}

static __irq void ser_irq_0 (void) {
  SER_INFO *pSerDev = &ser_Dev[0 - SER_MINPORT];
  
  /* USER CODE =====================================================================*/
  /* Handle serial interrupts, including writing received data to the 
     receive data register for UART 0 */
  #if (LPC23XX_SAMPLE_DRIVER == 1)
  /* <LPC2378 Example Code> */  
  volatile unsigned long iir;
  
  iir = *(pSerDev->iir);
   
  if ((iir & 0x4) || (iir & 0xC)) {                           // RDA or CTI pending
    while (*(pSerDev->lsr) & 0x01) {                          // Rx FIFO is not empty
      IN_BUF_WR(pSerDev, *(pSerDev->rbr));                    // Read Rx FIFO to buffer  
    }
  }
  if ((iir & 0x2)) {                                          // TXMIS pending
    pSerDev->txFifoEmpty = 1;
  }

  VICVectAddr = 0;
  #else
  /* <your code>  */
  #endif
  /* END USER CODE ================================================================ */     
}

static __irq void ser_irq_1 (void) { 
  SER_INFO *pSerDev = &ser_Dev[1 - SER_MINPORT];
  
  /* USER CODE =====================================================================*/
  /* Handle serial interrupts, including writing received data to the 
     receive data register for UART 1 */
  #if (LPC23XX_SAMPLE_DRIVER == 1)
  /* <LPC2378 Example Code> */  
  volatile unsigned long iir;
  
  iir = *(pSerDev->iir);
   
  if ((iir & 0x4) || (iir & 0xC)) {                           // RDA or CTI pending
    while (*(pSerDev->lsr) & 0x01) {                          // Rx FIFO is not empty
      IN_BUF_WR(pSerDev, *(pSerDev->rbr));                    // Read Rx FIFO to buffer  
    }
  }
  if ((iir & 0x2)) {                                          // TXMIS pending
    pSerDev->txFifoEmpty = 1;
  }

  VICVectAddr = 0;
  #else
  /* <your code>  */
  #endif
  /* END USER CODE ================================================================ */     
}

static __irq void ser_irq_2 (void) { 
  SER_INFO *pSerDev = &ser_Dev[2 - SER_MINPORT];
  
  /* USER CODE =====================================================================*/
  /* Handle serial interrupts, including writing received data to the 
     receive data register for UART 2 */
  #if (LPC23XX_SAMPLE_DRIVER == 1)
  /* <LPC2378 Example Code> */  
  volatile unsigned long iir;
  
  iir = *(pSerDev->iir);
   
  if ((iir & 0x4) || (iir & 0xC)) {                           // RDA or CTI pending
    while (*(pSerDev->lsr) & 0x01) {                          // Rx FIFO is not empty
      IN_BUF_WR(pSerDev, *(pSerDev->rbr));                    // Read Rx FIFO to buffer  
    }
  }
  if ((iir & 0x2)) {                                          // TXMIS pending
    pSerDev->txFifoEmpty = 1;
  }

  VICVectAddr = 0;
  #else
  /* <your code>  */
  #endif
  /* END USER CODE ================================================================ */     
}
